--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.DamageReport" parent="Base.Theme.DamageReport" />
+
+    <style name="Theme.DamageReport.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.DamageReport.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.DamageReport.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
