--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:onClick="home"
         android:padding="12dp"
         android:text="@string/login"
         android:textSize="16sp"
@@ -92,6 +93,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        android:onClick="register"
         android:padding="12dp"
         android:text="@string/register"
         android:textSize="16sp"
@@ -106,6 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:onClick="forgotPass"
         android:text="@string/forgot_password"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
