--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,21 +12,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="16dp"
+        android:elevation="4dp"
+        android:fontFamily="sans-serif-medium"
         android:gravity="center"
+        android:padding="6dp"
         android:text="@string/damage_report"
         android:textSize="24sp"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif-medium"
-        android:elevation="4dp"
-        android:padding="6dp" />
+        android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/rvReport"
         android:layout_width="match_parent"
         android:layout_height="652dp"
         android:layout_marginTop="48dp"
         android:layout_marginBottom="16dp"
-        tools:listitem="@android:layout/simple_list_item_1" />
+        tools:listitem="@layout/item_report" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAddReport"
@@ -36,6 +36,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="100dp"
         android:clickable="true"
+        android:onClick="newReport"
         android:src="@drawable/baseline_assignment_add_24" />
 
 </FrameLayout>
